# BitQuest

./: CMakeLists.txt  README.md  appveyor.yml  index.html
code/: Audio.cpp  Audio.h  ContactListener.cpp  Controls.cpp  Controls.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Game.cpp  Game.h  GameState.h  Player.cpp  Player.h  Player_states.cpp  Player_states.h  Prefabs.cpp  Prefabs.h  SaveLoad.cpp  SaveLoad.h  Scene.cpp  Scene.h  Slime_states.cpp  Slime_states.h  System_Renderer.cpp  System_Renderer.h  cmp_actor_movement.cpp  cmp_actor_movement.h  cmp_animation_component.cpp  cmp_enemy_AI.cpp  cmp_enemy_AI.h  cmp_physics.cpp  cmp_physics.h  cmp_player_movement.cpp  cmp_player_movement.h  cmp_player_physics.cpp  cmp_player_physics.h  cmp_texture_component.cpp  cmp_texture_component.h  gavin_states.cpp  (+13 more)
code/components/: Player_states.cpp  cmp_Sound.cpp  cmp_Sound.h  cmp_UI.cpp  cmp_UI.h  cmp_actor_movement.cpp  cmp_actor_movement.h  cmp_animation.cpp  cmp_animation.h  cmp_animation_component.cpp  cmp_animation_component.h  cmp_btn.cpp  cmp_btn.h  cmp_bullet.cpp  cmp_bullet.h  cmp_chest.cpp  cmp_chest.h  cmp_enemy_AI.cpp  cmp_enemy_AI.h  cmp_gavin_AI.cpp  cmp_gavin_AI.h  cmp_gavin_ai.cpp  cmp_gavin_ai.h  cmp_gavin_physics.cpp  cmp_gavin_physics.h  cmp_gavin_properties.cpp  cmp_gavin_properties.h  cmp_general_AI.cpp  cmp_general_AI.h  cmp_ghost_properties.cpp  cmp_ghost_properties.h  cmp_goblin_properties.cpp  cmp_goblin_properties.h  cmp_hurt.cpp  cmp_hurt.h  cmp_object_anim.cpp  cmp_object_anim.h  cmp_orc_properties.cpp  cmp_orc_properties.h  cmp_physics.cpp  (+31 more)
code/scenes/: CollisionListner.cpp  CollisionListner.h  Scene_Game_Over.cpp  Scene_Game_Over.h  scene_Boss_Battle.cpp  scene_Boss_Battle.h  scene_Level_1.cpp  scene_Level_1.h  scene_LoadGame.cpp  scene_LoadGame.h  scene_MainMenu.cpp  scene_MainMenu.h  scene_Settings.cpp  scene_Settings.h  scene_Settings_Audio.cpp  scene_Settings_Audio.h  scene_Settings_GamePlay.cpp  scene_Settings_Gameplay.h  scene_Settings_Graphics.cpp  scene_Settings_Graphics.h  scene_Shop.cpp  scene_Shop.h  scene_Tutorial.cpp  scene_Tutorial.h  scene_level1.cpp  scene_level1.h
docs/: index.html  style.css
engine/lib_ecm/: ecm.cpp  ecm.h
engine/lib_maths/: maths.h
engine/lib_tile_level_loader/: levelsystem.cpp  levelsystem.h
engine/src/: System_Renderer.cpp  engine.cpp  engine.h  system_physics.cpp  system_physics.h  system_resources.cpp  system_resources.h
lib_ecm/: ecm.cpp  ecm.h
lib_maths/: maths.h
lib_tile_level_loader/: levelsystem.cpp  levelsystem.h
res/: backgrounds.txt  level_1.txt  test.txt
res/RPG_Pixel_Sprites_-_Mini_Magicks/Summoner/: Thumbs.db
res/Tilemaps/: DeadBackground.txt  TestEnvironment.txt  backgrounds.txt  bossbattle.txt  level_1.txt  tutorial_level.txt
res/bluebird3_88725224/: pack.mcmeta
res/bluebird3_88725224/assets/minecraft/mcpatcher/ctm/grass/: block2.properties
res/bluebird3_88725224/assets/minecraft/mcpatcher/ctm/planks/: block5.properties  block5a.properties  block5b.properties  block5c.properties  block5d.properties  block5e.properties
res/bluebird3_88725224/assets/minecraft/texts/: splashes.txt
res/characters/: Bob_spritesheet(75%).psd
res/items/: Coin spritesheet.psd
res/savestates/: Graphics.txt  TestLevelSave.txt
res/textures/: Bob__archer_spritesheet(75%).psd  Coin spritesheet.psd  Logo.psd  NewTerrain.psd  Shield.psd  Sword.psd  arrow_sheet.psd  chest.psd  door.psd
res/textures/tile_sheets/: Level_Dungeon.tsx
res/tile_sheets/: Level1.tmx
web/: index.html  style.css
